# fhe-string-bounty

tfhe/: Cargo.toml
tfhe/examples/fhe_string/: Cargo.toml  README.md  client_key.rs  main.rs  readme_tutorial.rs
tfhe/examples/fhe_string/server_key/: case.rs  contains.rs  mod.rs  partial_ordering.rs  replace.rs  split.rs  trim.rs
tfhe/src/fhe_string/: README.md  ciphertext.rs  readme_tutorial.rs
tfhe/src/fhe_string/server_key/: contains.rs  repeat.rs  replace.rs  split.rs
